--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+		"start": "npm run watch:css && react-scripts start",
+		"build": "npm run watch:css && react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css"
+	},
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -34,5 +35,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.3.1",
+    "postcss-cli": "^8.3.1",
+    "tailwindcss": "^2.2.7"
   }
 }
